Fixed text wrapping in analytics page

--- a/xCheckStudio/Webviewer/CSS/analytics.css
+++ b/xCheckStudio/Webviewer/CSS/analytics.css
@@ -129,7 +129,7 @@ div {
   background-color    : rgba(255,255,255,0.0);
   top                 : 144px;
   height              : auto;
-  width               : auto;
+  width               : 160px;
   position            : absolute;
   margin              : 0;
   left                : 580px;
@@ -141,12 +141,15 @@ div {
   color               : rgba(51, 51, 51, 1.0);
   text-align          : left;
   line-height         : 19.0px;
+  text-overflow		  : ellipsis;
+  overflow			  : hidden;
+  white-space         : nowrap;
 }
 .a011 .details .abc123 {
   background-color    : rgba(255,255,255,0.0);
   top                 : 68px;
   height              : auto;
-  width               : auto;
+  width               : 160px;
   position            : absolute;
   margin              : 0;
   left                : 580px;
@@ -158,6 +161,9 @@ div {
   color               : rgba(51, 51, 51, 1.0);
   text-align          : left;
   line-height         : 19.0px;
+  text-overflow		  : ellipsis;
+  overflow			  : hidden;
+  white-space         : nowrap;
 }
 .a011 .details .rectanglecopy22 {
   background-color    : rgba(255,255,255,0.0);
